Bug 1516501 - Bug 1333038 follow-up: Convert forgotten use of nsMsgLineStreamBuffer to 'modern' pointer. r=darktrojan